Opened 12 years ago
Closed 12 years ago
#3427 closed defect (fixed)
Negative time format contains too many minuses: -577014:-32:-22.-77
| Reported by: | q345t7n3o67ym23oy8939t | Owned by: | |
|---|---|---|---|
| Priority: | minor | Component: | ffmpeg |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug: time format for negative time contains too many minuses: "-577014:-32:-22.-77", but should be "-577014:32:22.77".
ffmpeg version: N-60087-g94a5241 from http://ffmpeg.zeranoe.com/builds/
How to reproduce:
% "ffmpeg.exe" -loglevel "debug" -i "http://93.95.99.231:8200/" -f "segment" -codec "copy" -map "0" -segment_format "mpegts" -segment_list "target file.csv" -segment_list_size "0" -segment_list_type "csv" -segment_time "906" -segment_start_number "0" -reset_timestamps "1" "target file %d.ts"
… and wait negative time.
My ffmpeg log contains:
frame=89905 fps= 25 q=-1.0 size=N/A time=00:59:57.34 bitrate=N/A frame=89921 fps= 25 q=-1.0 size=N/A time=00:59:57.97 bitrate=N/A frame=89936 fps= 25 q=-1.0 size=N/A time=00:59:58.57 bitrate=N/A frame=89952 fps= 25 q=-1.0 size=N/A time=-577014:-32:-22.-77 bitrate=N/A frame=89952 fps= 25 q=-1.0 Lsize=N/A time=00:59:59.15 bitrate=N/A
Attachments (1)
Change History (17)
comment:2 by , 12 years ago
Attacment ffmpeg.log.7z contains another log with "frame= 1238 fps= 16 q=-1.0 size=N/A time=-577014:-32:-22.-77 bitrate=N/A " on 3458 line. Again with time -577014:-32:-22.-77.
comment:3 by , 12 years ago
| Status: | new → open |
|---|---|
| Version: | unspecified → git-master |
comment:4 by , 12 years ago
| Priority: | normal → minor |
|---|
follow-up: 6 comment:5 by , 12 years ago
can this only be reproduced with network input ?
only with segment output ?
comment:6 by , 12 years ago
Replying to michael:
can this only be reproduced with network input ?
only with segment output ?
I can not reproduce without segment output.
follow-up: 8 comment:7 by , 12 years ago
Two patches were sent; since we all cannot reproduce, can you test them?
http://thread.gmane.org/gmane.comp.video.ffmpeg.devel/175346
http://thread.gmane.org/gmane.comp.video.ffmpeg.devel/175415
comment:8 by , 12 years ago
Replying to cehoyos:
Two patches were sent; since we all cannot reproduce, can you test them?
http://thread.gmane.org/gmane.comp.video.ffmpeg.devel/175346
http://thread.gmane.org/gmane.comp.video.ffmpeg.devel/175415
I test on ffmpeg version N-61286-gdbc3e11 built on Mar 11 2014 22:06:56 with gcc 4.8.2 (GCC) without this patches, and reprodused error. But it took 10 hours. Error began to appear less often.
Where can I get a compiled version with the patch? I find it hard to compile it yourself.
follow-ups: 10 11 comment:9 by , 12 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Should be fixed in 4d17179b - please test current FFmpeg git head!
comment:10 by , 12 years ago
Replying to cehoyos:
Should be fixed in 4d17179b - please test current FFmpeg git head!
http://ffmpeg.zeranoe.com/builds/ on until the old version. Wait for tomorrow, please.
follow-up: 12 comment:11 by , 12 years ago
Replying to cehoyos:
Should be fixed in 4d17179b - please test current FFmpeg git head!
I can not compile ffmpeg, and http://ffmpeg.zeranoe.com/builds/ does not contains this patch. I can not test the patch.
follow-up: 13 comment:12 by , 12 years ago
Replying to q345t7n3o67ym23oy8939t:
Replying to cehoyos:
Should be fixed in 4d17179b - please test current FFmpeg git head!
I can not compile ffmpeg
Why not? It is supposed to work out of the box both on common and less common operating systems.
and http://ffmpeg.zeranoe.com/builds/ does not contains this patch.
This sounds impossible.
I can not test the patch.
Just test a current Zeranoe version.
comment:13 by , 12 years ago
Just test a current Zeranoe version.
Negative time no longer appears. The test lasted 24 hours.
comment:14 by , 12 years ago
| Resolution: | fixed |
|---|---|
| Status: | closed → reopened |
I can still reproduce this problem:
$ ffmpeg -i fate-suite/utvideo/utvideo_rgba_left.avi -f null -
ffmpeg version N-63346-g2491579 Copyright (c) 2000-2014 the FFmpeg developers
built on May 20 2014 20:00:07 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl
libavutil 52. 86.100 / 52. 86.100
libavcodec 55. 63.100 / 55. 63.100
libavformat 55. 39.100 / 55. 39.100
libavdevice 55. 13.101 / 55. 13.101
libavfilter 4. 5.100 / 4. 5.100
libswscale 2. 6.100 / 2. 6.100
libswresample 0. 19.100 / 0. 19.100
libpostproc 52. 3.100 / 52. 3.100
Input #0, avi, from 'fate-suite/utvideo/utvideo_rgba_left.avi':
Duration: 00:00:00.17, start: 0.000000, bitrate: 41978 kb/s
Stream #0:0: Video: utvideo (ULRA / 0x41524C55), rgba, 640x480, 29.97 fps, 29.97 tbr, 29.97 tbn, 29.97 tbc
Output #0, null, to 'pipe:':
Metadata:
encoder : Lavf55.39.100
Stream #0:0: Video: rawvideo (RGBA / 0x41424752), rgba, 640x480, q=2-31, 200 kb/s, 29.97 fps, 90k tbn, 29.97 tbc
Metadata:
encoder : Lavc55.63.100 rawvideo
Stream mapping:
Stream #0:0 -> #0:0 (utvideo -> rawvideo)
Press [q] to stop, [?] for help
[null @ 0x28952e0] Encoder did not produce proper pts, making some up.
frame= 5 fps=0.0 q=0.0 Lsize=N/A time=-577014:-32:-22.-77 bitrate=N/A
video:0kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 3843071590396854272.000000%
comment:15 by , 12 years ago
i get a
frame= 5 fps=0.0 q=0.0 Lsize=N/A time=00:00:00.16 bitrate=N/A
so i guess this must have been fixed
comment:16 by , 12 years ago
| Resolution: | → fixed |
|---|---|
| Status: | reopened → closed |
I will open a new ticket if I find another example.



Please provide your command line together with the complete, uncut console output to make this a valid ticket. If the output is really enormous, please provide at least the first 50 and the last 50 lines.