ffmpeg: fix printing INT64_MIN pts at the end

Fixes Ticket3427

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>