ffmpeg.c
@@ -1280,7 +1280,7 @@ static void print_report(int is_last_report, int64_t timer_start, int64_t cur_ti
             vid = 1;
         }
         /* compute min output value */
-        if ((is_last_report || !ost->finished) && ost->st->pts.val != AV_NOPTS_VALUE)
+        if (ost->st->pts.val != AV_NOPTS_VALUE)
             pts = FFMAX(pts, av_rescale_q(ost->st->pts.val,
                                           ost->st->time_base, AV_TIME_BASE_Q));
     }
